# C

./: CMakeLists.txt  main.c
LP1/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c  Ex7.c  Ex8.c  Ex9.c
LP2/: EX2.7.c  Ex1.c  Ex10.c  Ex11.c  Ex12.c  Ex13.c  Ex14.c  Ex15.c  Ex16.c  Ex17.c  Ex2.1.c  Ex2.10.c  Ex2.2.c  Ex2.3.c  Ex2.4.c  Ex2.5.c  Ex2.6.c  Ex2.8.c  Ex2.9.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c  Ex7.c  Ex8.c  Ex9.c
LP2.1/: Ex1.c  Ex2.1.c  Ex2.2.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c
TemaPeAcasa/: Ex1.c  Ex10.c  Ex11.c  Ex12.c  Ex13.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c  Ex7.c  Ex8.c  Ex9.c
TemaPeAcasa2/: Ex1.c  Ex10.c  Ex2.10.c  Ex2.2.c  Ex2.3.c  Ex2.4.c  Ex2.5.c  Ex2.6.c  Ex2.8.c  Ex2.9.c  Ex2.c  Ex3.1.c  Ex3.10.c  Ex3.11.c  Ex3.2.c  Ex3.3.c  Ex3.4.c  Ex3.5.c  Ex3.6.c  Ex3.7.c  Ex3.8.c  Ex3.9.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c  Ex7.c  Ex8.c  Ex9.c
TemaPeAcasa3/: Ex1.c  Ex2.1.c  Ex2.2.c  Ex2.3.c  Ex2.4.c  Ex2.5.c  Ex2.6.c  Ex2.7.c  Ex2.8.c  Ex2.9.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c  Ex7.c
TemaPeAcasa4/: Ex4.1.c  Ex4.10.c  Ex4.11.c  Ex4.2.c  Ex4.3.c  Ex4.4.c  Ex4.5.c  Ex4.6.c  Ex4.7.c  Ex4.8.c  Ex4.9.c
TemaPeAcasa5/: Ex1.c  Ex10.c  Ex11.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c  Ex7.c  Ex8.c  Ex9.c
TemaPeAcasa6/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c  Ex6.c  Ex7.c  Ex8.c  Ex9.c
