cmake_minimum_required(VERSION 3.28)
project(CursSDA C)

set(CMAKE_C_STANDARD 11)

add_executable(CursSDA main.c)

add_executable(Ex1 TemaPeAcasa/Ex1.c)
add_executable(Ex2 TemaPeAcasa/Ex2.c)
add_executable(Ex3 TemaPeAcasa/Ex3.c)
add_executable(Ex4 TemaPeAcasa/Ex4.c)
add_executable(Ex5 TemaPeAcasa/Ex5.c)
add_executable(Ex6 TemaPeAcasa/Ex6.c)
add_executable(Ex7 TemaPeAcasa/Ex7.c)
add_executable(Ex8 TemaPeAcasa/Ex8.c)
add_executable(Ex9 TemaPeAcasa/Ex9.c)
add_executable(Ex10 TemaPeAcasa/Ex10.c)
add_executable(Ex11 TemaPeAcasa/Ex11.c)
add_executable(Ex12 TemaPeAcasa/Ex12.c)
add_executable(Ex13 TemaPeAcasa/Ex13.c)
add_executable(Ex2.1 TemaPeAcasa2/Ex1.c)
add_executable(Ex2.2 TemaPeAcasa2/Ex2.c)
add_executable(Ex2.3 TemaPeAcasa2/Ex3.c)
add_executable(Ex2.4 TemaPeAcasa2/Ex4.c)
add_executable(Ex2.5 TemaPeAcasa2/Ex5.c)
add_executable(Ex2.6 TemaPeAcasa2/Ex6.c)
add_executable(Ex2.7 TemaPeAcasa2/Ex7.c)
add_executable(Ex2.8 TemaPeAcasa2/Ex8.c)
add_executable(Ex2.9 TemaPeAcasa2/Ex9.c)
add_executable(Ex2.10 TemaPeAcasa2/Ex10.c)
add_executable(Ex2.2.2 TemaPeAcasa2/Ex2.2.c)
add_executable(Ex2.2.3 TemaPeAcasa2/Ex2.3.c)
add_executable(Ex2.2.4 TemaPeAcasa2/Ex2.4.c)
add_executable(Ex2.2.5 TemaPeAcasa2/Ex2.5.c)
add_executable(Ex2.2.6 TemaPeAcasa2/Ex2.6.c)
add_executable(Ex2.2.8 TemaPeAcasa2/Ex2.8.c)
add_executable(Ex2.2.9 TemaPeAcasa2/Ex2.9.c)
add_executable(Ex2.2.10 TemaPeAcasa2/Ex2.10.c)
add_executable(Ex2.3.1 TemaPeAcasa2/Ex3.1.c)
add_executable(Ex2.3.2 TemaPeAcasa2/Ex3.2.c)
add_executable(Ex2.3.3 TemaPeAcasa2/Ex3.3.c)
add_executable(Ex2.3.4 TemaPeAcasa2/Ex3.4.c)
add_executable(Ex2.3.5 TemaPeAcasa2/Ex3.5.c)
add_executable(Ex2.3.6 TemaPeAcasa2/Ex3.6.c)
add_executable(Ex2.3.7 TemaPeAcasa2/Ex3.7.c)
add_executable(Ex2.3.8 TemaPeAcasa2/Ex3.8.c)
add_executable(Ex2.3.9 TemaPeAcasa2/Ex3.9.c)
add_executable(Ex2.3.10 TemaPeAcasa2/Ex3.10.c)
add_executable(Ex2.3.11 TemaPeAcasa2/Ex3.11.c)
add_executable(LP1.1 LP1/Ex1.c)
add_executable(LP1.2 LP1/Ex2.c)
add_executable(LP1.3 LP1/Ex3.c)
add_executable(LP1.4 LP1/Ex4.c)
add_executable(LP1.5 LP1/Ex5.c)
add_executable(LP1.6 LP1/Ex6.c)
add_executable(LP1.7 LP1/Ex7.c)
add_executable(LP1.8 LP1/Ex8.c)
add_executable(LP1.9 LP1/Ex9.c)
