cmake_minimum_required(VERSION 3.28)
project(CursSDA C)

set(CMAKE_C_STANDARD 11)

add_executable(CursSDA main.c)

add_executable(Ex1 TemaPeAcasa/Ex1.c)
add_executable(Ex2 TemaPeAcasa/Ex2.c)
add_executable(Ex3 TemaPeAcasa/Ex3.c)
add_executable(Ex4 TemaPeAcasa/Ex4.c)
add_executable(Ex5 TemaPeAcasa/Ex5.c)
add_executable(Ex6 TemaPeAcasa/Ex6.c)
add_executable(Ex7 TemaPeAcasa/Ex7.c)
add_executable(Ex8 TemaPeAcasa/Ex8.c)
add_executable(Ex9 TemaPeAcasa/Ex9.c)
add_executable(Ex10 TemaPeAcasa/Ex10.c)
add_executable(Ex11 TemaPeAcasa/Ex11.c)
add_executable(Ex12 TemaPeAcasa/Ex12.c)
add_executable(Ex13 TemaPeAcasa/Ex13.c)
add_executable(Ex2.1 TemaPeAcasa2/Ex1.c)
add_executable(Ex2.2 TemaPeAcasa2/Ex2.c)
add_executable(Ex2.3 TemaPeAcasa2/Ex3.c)
add_executable(Ex2.4 TemaPeAcasa2/Ex4.c)
add_executable(Ex2.5 TemaPeAcasa2/Ex5.c)
add_executable(Ex2.6 TemaPeAcasa2/Ex6.c)
add_executable(Ex2.7 TemaPeAcasa2/Ex7.c)
add_executable(Ex2.8 TemaPeAcasa2/Ex8.c)
add_executable(Ex2.9 TemaPeAcasa2/Ex9.c)
add_executable(Ex2.10 TemaPeAcasa2/Ex10.c)
add_executable(Ex2.2.2 TemaPeAcasa2/Ex2.2.c)
add_executable(Ex2.2.3 TemaPeAcasa2/Ex2.3.c)
add_executable(Ex2.2.4 TemaPeAcasa2/Ex2.4.c)
add_executable(Ex2.2.5 TemaPeAcasa2/Ex2.5.c)
add_executable(Ex2.2.6 TemaPeAcasa2/Ex2.6.c)
add_executable(Ex2.2.8 TemaPeAcasa2/Ex2.8.c)
add_executable(Ex2.2.9 TemaPeAcasa2/Ex2.9.c)
add_executable(Ex2.2.10 TemaPeAcasa2/Ex2.10.c)
add_executable(Ex2.3.1 TemaPeAcasa2/Ex3.1.c)
add_executable(Ex2.3.2 TemaPeAcasa2/Ex3.2.c)
add_executable(Ex2.3.3 TemaPeAcasa2/Ex3.3.c)
add_executable(Ex2.3.4 TemaPeAcasa2/Ex3.4.c)
add_executable(Ex2.3.5 TemaPeAcasa2/Ex3.5.c)
add_executable(Ex2.3.6 TemaPeAcasa2/Ex3.6.c)
add_executable(Ex2.3.7 TemaPeAcasa2/Ex3.7.c)
add_executable(Ex2.3.8 TemaPeAcasa2/Ex3.8.c)
add_executable(Ex2.3.9 TemaPeAcasa2/Ex3.9.c)
add_executable(Ex2.3.10 TemaPeAcasa2/Ex3.10.c)
add_executable(Ex2.3.11 TemaPeAcasa2/Ex3.11.c)
add_executable(LP1.1 LP1/Ex1.c)
add_executable(LP1.2 LP1/Ex2.c)
add_executable(LP1.3 LP1/Ex3.c)
add_executable(LP1.4 LP1/Ex4.c)
add_executable(LP1.5 LP1/Ex5.c)
add_executable(LP1.6 LP1/Ex6.c)
add_executable(LP1.7 LP1/Ex7.c)
add_executable(LP1.8 LP1/Ex8.c)
add_executable(LP1.9 LP1/Ex9.c)
add_executable(Ex3.1 TemaPeAcasa3/Ex1.c)
add_executable(Ex3.2 TemaPeAcasa3/Ex2.c)
add_executable(Ex3.3 TemaPeAcasa3/Ex3.c)
add_executable(Ex3.4 TemaPeAcasa3/Ex4.c)
add_executable(Ex3.5 TemaPeAcasa3/Ex5.c)
add_executable(Ex3.6 TemaPeAcasa3/Ex6.c)
add_executable(Ex3.7 TemaPeAcasa3/Ex7.c)
add_executable(Ex3.2.1 TemaPeAcasa3/Ex2.1.c)
add_executable(Ex3.2.2 TemaPeAcasa3/Ex2.2.c)
add_executable(Ex3.2.3 TemaPeAcasa3/Ex2.3.c)
add_executable(Ex3.2.4 TemaPeAcasa3/Ex2.4.c)
add_executable(Ex3.2.5 TemaPeAcasa3/Ex2.5.c)
add_executable(Ex3.2.6 TemaPeAcasa3/Ex2.6.c)
add_executable(Ex3.2.7 TemaPeAcasa3/Ex2.7.c)
add_executable(Ex3.2.8 TemaPeAcasa3/Ex2.8.c)
add_executable(Ex3.2.9 TemaPeAcasa3/Ex2.9.c)
add_executable(Ex4.1 TemaPeAcasa4/Ex4.1.c)
add_executable(Ex4.2 TemaPeAcasa4/Ex4.2.c)
add_executable(Ex4.3 TemaPeAcasa4/Ex4.3.c)
add_executable(Ex4.4 TemaPeAcasa4/Ex4.4.c)
add_executable(Ex4.5 TemaPeAcasa4/Ex4.5.c)
add_executable(Ex4.6 TemaPeAcasa4/Ex4.6.c)
add_executable(Ex4.7 TemaPeAcasa4/Ex4.7.c)
add_executable(Ex4.8 TemaPeAcasa4/Ex4.8.c)
add_executable(Ex4.9 TemaPeAcasa4/Ex4.9.c)
add_executable(Ex4.10 TemaPeAcasa4/Ex4.10.c)
add_executable(Ex4.11 TemaPeAcasa4/Ex4.11.c)
add_executable(LP2.1 LP2/Ex1.c)
add_executable(LP2.2 LP2/Ex2.c)
add_executable(LP2.3 LP2/Ex3.c)
add_executable(LP2.4 LP2/Ex4.c)
add_executable(LP2.5 LP2/Ex5.c)
add_executable(LP2.6 LP2/Ex6.c)
add_executable(LP2.7 LP2/Ex7.c)
add_executable(LP2.8 LP2/Ex8.c)
add_executable(LP2.9 LP2/Ex9.c)
add_executable(LP2.10 LP2/Ex10.c)
add_executable(LP2.11 LP2/Ex11.c)
add_executable(LP2.12 LP2/Ex12.c)
add_executable(LP2.13 LP2/Ex13.c)
add_executable(LP2.14 LP2/Ex14.c)
add_executable(LP2.15 LP2/Ex15.c)
add_executable(LP2.16 LP2/Ex16.c)
add_executable(LP2.17 LP2/Ex17.c)
add_executable(LP2.2.1 LP2/Ex2.1.c)
add_executable(Lp2.2.2 LP2/Ex2.2.c)
add_executable(LP2.2.3 LP2/Ex2.3.c)
add_executable(LP2.2.4 LP2/Ex2.4.c)
add_executable(LP2.2.5 LP2/Ex2.5.c)
add_executable(LP2.2.6 LP2/Ex2.6.c)
